--- a/src/index.css
+++ b/src/index.css
@@ -2,87 +2,84 @@
 
 @font-face {
   font-family: "Barlow";
-  src: url("./fonts/BarlowCondensed-Extralight.ttf") format("truetype");
+  src: url("./assets/fonts/BarlowCondensed-Extralight.ttf") format("truetype");
   font-weight: 200;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Barlow";
-  src: url("./fonts/BarlowCondensed-Light.ttf") format("truetype");
+  src: url("./assets/fonts/BarlowCondensed-Light.ttf") format("truetype");
   font-weight: 300;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Barlow";
-  src: url("./fonts/BarlowCondensed-Regular.ttf") format("truetype");
+  src: url("./assets/fonts/BarlowCondensed-Regular.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Barlow";
-  src: url("./fonts/BarlowCondensed-Medium.ttf") format("truetype");
+  src: url("./assets/fonts/BarlowCondensed-Medium.ttf") format("truetype");
   font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Barlow";
-  src: url("./fonts/BarlowCondensed-SemiBold.ttf") format("truetype");
+  src: url("./assets/fonts/BarlowCondensed-SemiBold.ttf") format("truetype");
   font-weight: 600;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Barlow";
-  src: url("./fonts/BarlowCondensed-Bold.ttf") format("truetype");
+  src: url("./assets/fonts/BarlowCondensed-Bold.ttf") format("truetype");
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Barlow";
-  src: url("./fonts/BarlowCondensed-ExtraBold.ttf") format("truetype");
+  src: url("./assets/fonts/BarlowCondensed-ExtraBold.ttf") format("truetype");
   font-weight: 800;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Barlow";
-  src: url("./fonts/BarlowCondensed-Black.ttf") format("truetype");
+  src: url("./assets/fonts/BarlowCondensed-Black.ttf") format("truetype");
   font-weight: 900;
   font-style: normal;
 }
-
-body {
-  font-family: "barlow", sans-serif;
-}
-
 
 .highlight {
   @apply bg-gray-200 px-1 text-black font-bold;
 }
 
-
-
-
+@theme {
+  --font-barlow: "barlow", sans-serif;
+  --color-blackGradient: linear-gradient(90deg, #000000 0%, #000000 100%);
+  --shadow-custom: -5px 5px 11px #d7d7d7;
+}
 
 /* SkillSet Component Tailwind */
 
 .skillset-section {
-  @apply shadow-[-5px_5px_11px_#d7d7d7] bg-gradient-to-r from-gray-100 to-gray-400 my-28 rounded-2xl p-10;
+  @apply relative shadow-custom bg-gradient-to-r from-gray-100 to-gray-400 my-28 rounded-2xl p-10;
 }
 
 /* Project Component Tailwind */
 
 .project-section {
-  @apply shadow-[-5px_5px_11px_#d7d7d7] bg-gradient-to-r from-black/70 to-black rounded-2xl p-10;
+  @apply shadow-custom bg-gradient-to-r from-black/70 to-black rounded-2xl p-10;
 }
 
 .custom-spotlight-card {
-  @apply shadow-[-5px_5px_11px_#d7d7d7] bg-gradient-to-r from-gray-100 to-gray-400 my-28 rounded-2xl p-10;
+  @apply shadow-custom bg-gradient-to-r from-gray-100 to-gray-400 my-28 rounded-2xl p-10;
 }
 
 .project-title {
@@ -105,11 +102,10 @@ body {
   @apply font-normal text-xl list-disc space-y-2;
 }
 
-
 /* Contact Component Tailwind */
 
 .contact-section {
-  @apply shadow-[-5px_5px_11px_#d7d7d7] bg-gradient-to-r from-gray-100 to-gray-400 my-28 rounded-2xl;
+  @apply shadow-custom bg-gradient-to-r from-gray-100 to-gray-400 my-28 rounded-2xl;
 }
 
 .contact-location {
@@ -132,8 +128,6 @@ body {
   @apply text-3xl;
 }
 
-
-
 /* Icons tailwind */
 .contact-icon {
   @apply mr-2 inline;
@@ -142,4 +136,3 @@ body {
 .quote-icon {
   @apply text-4xl text-gray-300;
 }
-
