complete skillset section

--- a/src/index.css
+++ b/src/index.css
@@ -2,56 +2,56 @@
 
 @font-face {
   font-family: "Barlow";
-  src: url("./assets/fonts/BarlowCondensed-Extralight.ttf") format("truetype");
+  src: url("/fonts/BarlowCondensed-Extralight.ttf") format("truetype");
   font-weight: 200;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Barlow";
-  src: url("./assets/fonts/BarlowCondensed-Light.ttf") format("truetype");
+  src: url("/fonts/BarlowCondensed-Light.ttf") format("truetype");
   font-weight: 300;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Barlow";
-  src: url("./assets/fonts/BarlowCondensed-Regular.ttf") format("truetype");
+  src: url("/fonts/BarlowCondensed-Regular.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Barlow";
-  src: url("./assets/fonts/BarlowCondensed-Medium.ttf") format("truetype");
+  src: url("/fonts/BarlowCondensed-Medium.ttf") format("truetype");
   font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Barlow";
-  src: url("./assets/fonts/BarlowCondensed-SemiBold.ttf") format("truetype");
+  src: url("/fonts/BarlowCondensed-SemiBold.ttf") format("truetype");
   font-weight: 600;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Barlow";
-  src: url("./assets/fonts/BarlowCondensed-Bold.ttf") format("truetype");
+  src: url("/fonts/BarlowCondensed-Bold.ttf") format("truetype");
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Barlow";
-  src: url("./assets/fonts/BarlowCondensed-ExtraBold.ttf") format("truetype");
+  src: url("/fonts/BarlowCondensed-ExtraBold.ttf") format("truetype");
   font-weight: 800;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Barlow";
-  src: url("./assets/fonts/BarlowCondensed-Black.ttf") format("truetype");
+  src: url("/fonts/BarlowCondensed-Black.ttf") format("truetype");
   font-weight: 900;
   font-style: normal;
 }
