--- a/src/index.css
+++ b/src/index.css
@@ -60,17 +60,14 @@
   --font-barlow: "barlow", sans-serif;
   --color-blackGradient: linear-gradient(90deg, #000000 0%, #000000 100%);
   --shadow-custom: -5px 5px 11px #d7d7d7;
+  --radius-custom: 1.5% 96% 1.5% 100% / 100% 0% 100% 0%;
 }
 
 /* utilities tailwind */
 
 @layer utilities {
-  .contact-icon {
-    @apply mr-2 inline;
-  }
-
   .quote-icon {
-    @apply text-4xl text-gray-300;
+    @apply text-xl sm:text-3xl md:text-5xl text-gray-300;
   }
 
   .highlight {
@@ -81,13 +78,13 @@
 /* SkillSet Component Tailwind */
 
 .skillset-section {
-  @apply relative shadow-custom bg-gradient-to-r from-gray-100 to-gray-400 my-28 rounded-2xl p-10;
+  @apply relative flex flex-col gap-20 shadow-custom bg-gradient-to-r from-gray-100 to-gray-400 my-28 rounded-custom;
 }
 
 /* Project Component Tailwind */
 
 .project-section {
-  @apply shadow-custom bg-gradient-to-r from-black/70 to-black rounded-2xl p-10;
+  @apply shadow-custom bg-gradient-to-r from-black/70 to-black rounded-custom p-10;
 }
 
 .custom-spotlight-card {
@@ -95,7 +92,7 @@
 }
 
 .project-title {
-  @apply text-[20rem] py-10 font-bold;
+  @apply py-10 font-bold;
 }
 
 .project-list {
@@ -117,7 +114,7 @@
 /* Contact Component Tailwind */
 
 .contact-section {
-  @apply shadow-custom bg-gradient-to-r from-gray-100 to-gray-400 my-28 rounded-2xl;
+  @apply shadow-custom bg-gradient-to-r from-gray-100 to-gray-400 my-28 rounded-custom;
 }
 
 .contact-location {
@@ -125,7 +122,7 @@
 }
 
 .contact-heading {
-  @apply text-[15rem] font-bold;
+  @apply font-bold;
 }
 
 .contact-list-wrapper {
@@ -133,9 +130,13 @@
 }
 
 .contact-list {
-  @apply list-disc text-3xl space-y-5;
+  @apply list-disc space-y-5;
 }
 
 .contact-list-item {
-  @apply text-3xl;
+  @apply text-xl sm:text-2xl;
+}
+
+.contact-icon {
+  @apply mr-2 inline;
 }
