--- a/src/index.css
+++ b/src/index.css
@@ -59,19 +59,16 @@
 @theme {
   --font-barlow: "barlow", sans-serif;
   --color-blackGradient: linear-gradient(90deg, #000000 0%, #000000 100%);
-  --shadow-custom: -5px 5px 11px #d7d7d7;
+  --shadow-custom: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
   --radius-custom: 1.5% 96% 1.5% 100% / 100% 0% 100% 0%;
-}
-
-body {
-  @apply bg-gray-100;
 }
 
 /* utilities tailwind */
 
 @layer utilities {
   .quote-icon {
-    @apply text-xl sm:text-3xl md:text-5xl text-gray-300;
+    @apply text-xl sm:text-3xl md:text-5xl text-gray-400;
   }
 
   .highlight {
@@ -82,17 +79,17 @@ body {
 /* SkillSet Component Tailwind */
 
 .skillset-section {
-  @apply relative flex flex-col gap-y-10 shadow-custom bg-gradient-to-r from-gray-100 to-gray-400 my-28 sm:rounded-custom;
+  @apply my-28 relative flex flex-col gap-y-10 shadow-custom bg-gradient-to-r from-gray-100 to-gray-400;
 }
 
 /* Project Component Tailwind */
 
 .project-section {
-  @apply shadow-custom bg-gradient-to-r from-black/70 to-black sm:rounded-custom p-10;
+  @apply my-28 shadow-custom bg-gradient-to-r from-black/70 to-black p-10;
 }
 
 .custom-spotlight-card {
-  @apply shadow-custom bg-gradient-to-r from-gray-100 to-gray-400 my-28 rounded-2xl p-10;
+  @apply shadow-custom bg-gradient-to-r from-gray-100 to-gray-400 rounded-2xl p-10;
 }
 
 .project-title {
@@ -118,7 +115,7 @@ body {
 /* Contact Component Tailwind */
 
 .contact-section {
-  @apply shadow-custom bg-gradient-to-r from-gray-100 to-gray-400 my-28 sm:rounded-custom;
+  @apply my-28 shadow-custom bg-gradient-to-r from-gray-100 to-gray-400;
 }
 
 .contact-location {
